.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Company_Pension_Scheme__c.object
<CustomObject>
    <description>Used to record details of Company wide pension scheme</description>
    <fields>
        <fullName>xcdhcm__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Purpose: need to show only active company pensions [JIRA NPPD-305]</description>
        <label>No longer in use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Companies_Name__c</fullName>
        <label>Company</label>
        <referenceTo>xcdhcm__Company__c</referenceTo>
        <relationshipLabel>Company Pension Schemes</relationshipLabel>
        <relationshipName>Company_Pension_Schemes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Contact_E_mail__c</fullName>
        <label>Contact e-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Contact_Job_Title__c</fullName>
        <label>Contact job title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Contact_Name__c</fullName>
        <label>Contact name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Contact_Telephone_Number__c</fullName>
        <label>Contact telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Contribution_basis__c</fullName>
        <description>For information only</description>
        <inlineHelpText>For information - describes standard Company policy.  Set actual values on Employee contribution</inlineHelpText>
        <label>Contribution basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pensionable salary</fullName>
                    <default>true</default>
                    <label>Pensionable salary</label>
                </value>
                <value>
                    <fullName>Pensionable variable pay</fullName>
                </value>
                <value>
                    <fullName>Auto enrolment earnings</fullName>
                </value>
                <value>
                    <fullName>AE qualifying earnings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Contribution_basis_notes__c</fullName>
        <description>Details of Employer and Employee contribution rates</description>
        <inlineHelpText>Use this field to record details of Company scheme enrolment and contribution policies</inlineHelpText>
        <label>Contribution basis - notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__First_contribution__c</fullName>
        <description>Note these picklist values are in auto enrolment setup calculations, setting values in Compensation/Proposed contribution date</description>
        <inlineHelpText>Identifies date of first contributions following employee enrolment to scheme</inlineHelpText>
        <label>First contribution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On enrolment</fullName>
                </value>
                <value>
                    <fullName>1st of next period</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__NI_saving_passed_on__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>% of saving from pension salary sacrifice passed on from employer to employee</inlineHelpText>
        <label>NI saving salary sacrifice - passed on</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Notes__c</fullName>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Pension_Provider__c</fullName>
        <label>Plan provider</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Pension_scheme_reference__c</fullName>
        <description>The reference from the pension scheme for this particular employer</description>
        <inlineHelpText>Use this field to record the pension provider&apos;s reference number</inlineHelpText>
        <label>Pension scheme reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Pension_tax_treatment__c</fullName>
        <description>Do not change picklist values Net pay arrangement, Relief at source 
Used in calculation of Employee pension contribution</description>
        <label>Pension tax treatment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net pay arrangement</fullName>
                </value>
                <value>
                    <fullName>Relief at source</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Postpone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this scheme use postponement</description>
        <label>Postpone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Postponement_notes__c</fullName>
        <description>Rules to be used for postponement - These can be implemented using the workflow &quot;System: Proposed deferral date&quot;</description>
        <label>Postponement notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Qualifying_scheme__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify if the scheme meets the minimum criteria for UK Auto Enrolment.  Note the values as at 4.2016 and these may change over time</description>
        <inlineHelpText>Check if the scheme meets the minimum criteria for Auto Enrolment.  For a DC scheme, the Employer contribution should be at least 3% and total contributions at least 8%</inlineHelpText>
        <label>Qualifying scheme</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Regulatory_authority__c</fullName>
        <inlineHelpText>If the scheme is supervised by a regulatory authority please note this here</inlineHelpText>
        <label>Regulatory authority</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Scheme_registry_number__c</fullName>
        <description>Pension Scheme Registry number (PSR)</description>
        <inlineHelpText>For UK regulated pension schemes, record the Pension Scheme Registry number (PSR)</inlineHelpText>
        <label>Scheme registry number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Standard_employee_contribution__c</fullName>
        <description>Populates the default employee contribution used for auto-enrolment - for other pensions used for reference only unless customised</description>
        <inlineHelpText>Use the standard contribution to set a default value when employee auto enrolment contributions are set up</inlineHelpText>
        <label>Standard employee contribution %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Standard_employer_contribution__c</fullName>
        <description>Populates the default employer contribution used for auto-enrolment - for other pensions used for reference only unless customised</description>
        <inlineHelpText>Use the standard contribution to set a default value when employer auto enrolment contributions are set up</inlineHelpText>
        <label>Standard employer contribution %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Supplier_code__c</fullName>
        <description>Holds the supplier cost code of Pension scheme.</description>
        <label>Supplier code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Company Pension Scheme</label>
    <nameField>
        <label>Pension scheme</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Pension Schemes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>